# bytte-backend

./: .env.example  .gitignore  .vercelignore  README.md  alembic.ini  index.py  main.py  pyproject.toml  pytest.ini  requirements.txt  vercel.json
Application/: ApiBytte.py  auth_config.py  auth_context.py  auth_routes.py  cors_origins.py  db_connection_hint.py  deps.py  env_aliases.py  error_handlers.py  http_util.py  jwt_tokens.py  middleware_logging.py  onboarding_mapping.py  onboarding_routes.py  passwords.py  restaurant_routes.py  role_permissions.py  schemas_onboarding.py  schemas_pagination.py  schemas_restaurant_profile.py  schemas_restaurante_mi.py  storage_config.py  storage_urls.py  upload_routes.py
Domain/: ModeloCalificacion.py  ModeloCategoriaMenu.py  ModeloCategorias.py  ModeloCiudad.py  ModeloCliente.py  ModeloDepartamento.py  ModeloEtiquetas.py  ModeloHorario.py  ModeloMenu.py  ModeloMesajeBot.py  ModeloPagos.py  ModeloPedido.py  ModeloRangoPrecioRestaurante.py  ModeloReserva.py  ModeloRestaurante.py  ModeloRol.py  ModeloSuperUsuario.py  ModeloUbicacion.py  ModeloUsuario.py
Infraestructure/: Database.py  InfraestructuraCalificacion.py  InfraestructuraCategorias.py  InfraestructuraCliente.py  InfraestructuraEtiquetas.py  InfraestructuraGeografia.py  InfraestructuraHorarios.py  InfraestructuraMenu.py  InfraestructuraPagos.py  InfraestructuraPedido.py  InfraestructuraRangoPrecioRestaurante.py  InfraestructuraReserva.py  InfraestructuraRestaurante.py  InfraestructuraRestaurantePerfil.py  InfraestructuraRol.py  InfraestructuraSuperUsuario.py  errors.py  (+3 more)
(+42 files in other folders)
